# wb32-dfu-updater

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  build.sh  config.h
cmake/: config.h.in  install_common.cmake
common_src/: dfufw.h  main.c
source/wb32-dfu-updater_cli/: CMakeLists.txt  config.h  main.c
source/wb32-dfu-updater_cli/src/: cmdinfo.c  dfufw.c  dfufw.h  dfufwdevice.h  hex2bin.c  hex2bin.h
src/: cmdinfo.c  cmdinfo.h  dfufw.c  hex2bin.h  main.c
src_common/: cmdinfo.c  cmdinfo.h  dfufw.c  dfufw.h  dfufwdevice.c  dfufwdevice.h  hex2bin.c  hex2bin.h  kbhit.c  kbhit.h  main.c
src_windows/: getopt.c  getopt.h
